# celerity-comp

./: .clang-format  .gitignore  CMakeLists.txt
examples/: extract_SYCL.sh  extract_SYCL_bench.sh  features_from_OpenCL.sh  features_from_SYCL.sh  matrix-multiply-sycl.cpp
examples/miniweather/: miniWeather_mpi_parallelfor_1.bc  miniWeather_mpi_parallelfor_16.bc  miniWeather_mpi_parallelfor_2.bc  miniWeather_mpi_parallelfor_4.bc  miniWeather_mpi_parallelfor_8.bc
examples/old-sycl/: Arithmetic.cpp  ArithmeticLocalMemory.cpp
examples/sycl/: ArithLocalMixed.cpp  ArithMixedUnitOp.cpp  ArithMixedUnitType.cpp  ArithSingleUnit.cpp  Arithmetic.cpp  ArithmeticLocalMemory.cpp  DRAM.cpp  GlobalMemory.cpp  GlobalMemory2.cpp  LocalMemory.cpp  SpecialFunctions.cpp  example.cpp  vec-add.cpp
feature-pass/: CMakeLists.txt
feature-pass/src/: FeatureAnalysis.cpp  FeatureAnalysisPlugin.cpp
feature-pass/src/feature-sets/: FanFeatureSet.cpp
include/: CoalescedAnalysis.hpp  DefaultFeatureAnalysis.hpp  FeatureAnalysis.hpp  FeatureNormalization.hpp  FeaturePrinter.hpp  FeatureSet.hpp  IMPoly.hpp  InstructionCollection.h  KernelInvariant.hpp  Kofler13Analysis.hpp  MemAccessFeature.hpp  PolFeatAnalysis.hpp  PolFeatPrinter.hpp  Registry.hpp  celerity_interface_pass.h
src/: FeatureAnalysis.cpp  FeatureAnalysisPlugin.cpp  FeatureSet.cpp  IMPoly.cpp  KernelInvariant.cpp  Kofler13Analysis.cpp  PolFeatAnalysis.cpp  celerity_interface_pass.cpp  feature_tool.cpp
src/feature-sets/: FanFeatureSet.cpp  FeatureSet.cpp  Grewe11FeatureSet.cpp
